# BOOK-GPLE

./: README.md
chapter01/1.2 死磕Shell命令/: example.awk  grade.txt  people.txt
chapter01/1.3 Shell脚本编程/: case.sh  first_script.sh  for.sh  test1.sh  test2.sh  test3.sh  until.sh  while.sh
chapter01/1.5 解剖Makefile/: Makefile
chapter01/1.6 GNU-autotools/: configure.ac
chapter01/1.6 GNU-autotools/include/: head.h
chapter01/1.6 GNU-autotools/lib/: Makefile.am  haircut.c  havemeal.c
chapter01/1.6 GNU-autotools/src/: Makefile.am  main.c
chapter02/2.1 基本要素/: goto.c  increase_decrease.c  namespace.c  translate_numbers1.c  translate_numbers2.c  type.c  while.c
chapter02/2.2 函数/: callback.c  head4inline.h  inline.c  invert.c  max.c  recursive_func.c  variable_arguments.c
chapter02/2.3 数组与指针/: Makefile  array_pointer.c  basic_pointer.c  const.c  const_pointer.c  const_pointer2.c  function_array.c  function_pointer.c  multiply_array.c  multiply_pointer.c  zero_array.c
chapter02/2.4 内存管理/: heap.c
chapter02/2.5 组合数据类型/: enum.c  struct.c
chapter02/2.6 高级议题/: attribute1.c  attribute2.c  attribute3.c  attribute4.c  cond_compile.c  example.i  head.h  macro.c  macro.i  typedef.c
chapter03/3.1 无所不在的链表/: commonheader.h  doubly_circle_list.c  kernel_list.c  list.h  singly_circle_list.c  singly_list.c
chapter03/3.2 线性表变异体/: hanoi_stack.c  linked_queue.c  linked_stack.c  sequent_queue.c  sequent_stack.c
chapter03/3.3 小白慎入：非线性结构/: Makefile  avl.c  bst.c  drawtree.c  queue.c  travel.c
chapter04/4.2 文件操作/: Makefile  copy_fgetc_fputc.c  copy_fgets_fputs.c  dev_no.c  dup.c  (+9 more)
(+99 files in other folders)
